--- a/.github/workflows/build_single.yml
+++ b/.github/workflows/build_single.yml
@@ -1,7 +1,6 @@
 name: Build Single (Manual Input)
 
 on:
-  # 手动触发（需输入要编译的设备 env 名称）
   workflow_dispatch:
     inputs:
       board:
@@ -11,18 +10,14 @@ on:
         type: string
 
 jobs:
-  # Job: 单设备编译
   build:
     runs-on: ubuntu-latest
-
     steps:
-      # 拉取本仓库（自定义 variants 配置）
       - name: Checkout 本地自定义配置
         uses: actions/checkout@v6
         with:
           path: mtcn
 
-      # 拉取官方 Meshtastic 固件源码
       - name: Checkout 官方固件源码
         uses: actions/checkout@v6
         with:
@@ -30,19 +25,16 @@ jobs:
           path: firmware
           submodules: recursive
 
-      # 替换为自定义硬件变种配置
       - name: 应用自定义硬件变种(variants)
         run: |
           rm -rf firmware/variants
           cp -r mtcn/variants firmware/
 
-      # 配置 Python 运行环境
       - name: 配置 Python 3.11 环境
         uses: actions/setup-python@v6
         with:
           python-version: "3.11"
 
-      # 安装编译工具链（解决 mklittlefs 缺失问题）
       - name: 安装 PlatformIO 及依赖工具
         run: |
           python -m pip install -U pip
@@ -51,14 +43,12 @@ jobs:
           pio pkg install -g -t tool-mklittlefs
           pio pkg install -g -t tool-esptoolpy
 
-      # 编译指定设备
       - name: 编译目标设备 ${{ inputs.board }}
         run: |
           cd firmware
           pio run -e ${{ inputs.board }}
 
-      # 上传编译后的固件产物
-      - name: 上传目标设备固件
+      - name: 上传固件产物
         uses: actions/upload-artifact@v6
         with:
           name: firmware-${{ inputs.board }}
