--- a/variants/esp32c3/esp32c3.ini
+++ b/variants/esp32c3/esp32c3.ini
@@ -5,6 +5,9 @@ custom_esp32_kind = esp32c3
 monitor_speed = 115200
 monitor_filters = esp32_c3_exception_decoder
 
+platform_packages =
+    platformio/framework-arduinoespressif32 @ https://github.com/ssp97/framework-arduinoespressif32-pm/archive/17b244a612a362830696abdb11ecff4be8834c6d.zip
+
 lib_deps =
   ${esp32_common.lib_deps}
   # renovate: datasource=git-refs depName=meshtastic-ESP32_Codec2 packageName=https://github.com/meshtastic/ESP32_Codec2 gitBranch=master
