--- a/.github/workflows/CI-from-ralease.yml
+++ b/.github/workflows/CI-from-ralease.yml
@@ -2,25 +2,14 @@ name: CI-Build-From-commit
 
 on:
   workflow_dispatch:
-    inputs:
-      # 手动指定官方 commit 哈希
-      meshtastic_commit:
-        description: 'Meshtastic 提交哈希(commit SHA)'
-        required: true
-        default: ''
-      # 手动指定 patches 下的子文件夹，留空则使用根目录补丁
-      patch_subdir:
-        description: 'patches 子文件夹（留空=使用根目录补丁）'
-        required: false
-        default: ''
 
 jobs:
   setup:
     runs-on: ubuntu-latest
     outputs:
       all: ${{ steps.gen-matrix.outputs.all }}
-      # 传递官方 commit 给 build 任务
-      official_commit: ${{ github.event.inputs.meshtastic_commit }}
+      # 固定使用指定 commit
+      official_commit: ${{ env.FIXED_COMMIT }}
       # 把补丁目录传给 build 任务
       patch_subdir: ${{ github.event.inputs.patch_subdir }}
     steps:
@@ -29,6 +18,10 @@ jobs:
         with:
           path: mtcn
 
+      # 固定写死要使用的官方 commit
+      - name: 设置固定官方 commit
+        run: echo "FIXED_COMMIT=这里改成你要的commit哈希" >> "$GITHUB_ENV"
+
       # 拉取指定 commit 的官方源码
       - name: 拉取官方固件源码
         uses: actions/checkout@v6
@@ -36,7 +29,8 @@ jobs:
           repository: meshtastic/firmware
           path: firmware
           submodules: recursive
-          ref: ${{ github.event.inputs.meshtastic_commit }}
+          # 使用固定 commit
+          ref: ${{ env.FIXED_COMMIT }}
 
       # 根据输入选择补丁文件夹
       - name: 应用自定义配置与补丁
